--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:server": "nodemon server/index.js"
   },
   "dependencies": {
-    "@google/genai": "^1.33.0",
+    "openai": "^4.28.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
